--- a/static/styleprofile.css
+++ b/static/styleprofile.css
@@ -1,7 +1,7 @@
 
 body {
     background-color: rgb(218, 216, 216);
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     bottom: 0;
     left: 0;
