--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
  <div >
         <ul class="mainmenu">
             <li> <a href="index.html">Home</a> </li>
-            <li> <a href="#about">Login</a> </li>
+            <li> <a href="login">Login</a> </li>
             <li> <a href="#testimonial">About</a> </li>
             <li> <a href="#contact">Contact Us</a> </li>
         </ul>
