modified:   templates/dashboard.html

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,7 @@
                 <ul class="mainmenu">
                     <li> <a href="{{url_for('index')}}">Home</a> </li>
                     <li> <a href="{{url_for('logout')}}">logout</a> </li>
-                    <li> <a href="#testimonial">About</a> </li>
+                    <li> <a href="/#circle">About</a> </li>
                     <li> <a href="#contact">Contact Us</a> </li>
                 </ul>
                <!-- <hr>----->
